--- a/package.json
+++ b/package.json
@@ -6,9 +6,18 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "axios": "^0.27.2",
+    "bootstrap": "^5.1.3",
+    "css-loader": "^6.7.1",
+    "jquery": "^3.6.0",
+    "nodemailer": "^6.7.5",
+    "popper.js": "^1.16.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.1",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
